<resources>
    <string name="app_name">My Application</string>

    <string-array name="languages">
        <item>c语言</item>
        <item>java </item>
        <item>php</item>
        <item>xml</item>
        <item>html</item>
    </string-array>


    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <!-- applet -->
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>

    <!-- verify -->
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>

    <!-- format -->
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>

    <string name="hello">Hello World, SDKSampleActivity!</string>
    <!--    <string name="app_name">SDKSample</string>-->
    <string name="app_share">分享</string>

    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>

    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

    <!-- WXMediaMessage -->
    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>

    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>

    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <!-- <item>发送图片的URL</item> -->
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>

    <string name="send_pic">发送照片</string>

    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>

    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>

    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>
    <string name="send_appbrand">发送小程序</string>
    <string-array name="send_appbrand_item">
        <item>发送小程序</item>
    </string-array>
    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>

    <string name="send_emoji">发送表情消息</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>

    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>

    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>

    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>

    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>

    <string name="scan_qrcode_login">扫码登录</string>
    <string name="auth">微信登录</string>
    <string name="cancel_auth">取消登录</string>

    <string name="qrcode_wait_for_scan">扫描二维码登录</string>
    <string name="qrcode_scanned">点击确认登录</string>

    <string name="result_succ" formatted="false">登录成功，code=%s</string>
    <string name="result_normal_err">登录失败，一般错误</string>
    <string name="result_network_err">登录失败，网络错误</string>
    <string name="result_json_decode_err">json解码失败</string>
    <string name="result_user_cancel">用户取消</string>
    <string name="result_timeout_err">登录失败，超时错误</string>

    <string name="target_scene">目标场景</string>
    <string name="target_scene_session">会话</string>
    <string name="target_scene_timeline">朋友圈</string>
    <string name="target_scene_favorite">收藏</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--<string name="app_name">QrCodeScan</string>-->
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>

    <string name="settings_short_name">设置shortcuts</string>
    <string name="settings_long_name">设置long_shortcuts</string>
    <string name="settings_disable_msg">设置disable_shortcuts</string>

    <string name="fingerprint_recognition_start">开始指纹识别</string>
    <string name="fingerprint_recognition_cancel">取消指纹识别</string>
    <string name="fingerprint_recognition_guide_tip">点击“开始指纹识别”按钮</string>
    <string name="fingerprint_recognition_tip">请进行指纹识别，长按指纹解锁键</string>
    <string name="fingerprint_recognition_not_support">此设备不支持指纹解锁</string>
    <string name="fingerprint_recognition_success">指纹识别成功</string>
    <string name="fingerprint_recognition_failed">指纹识别失败，请重试！</string>
    <string name="fingerprint_recognition_error">指纹识别错误，等待几秒之后再重试</string>
    <string name="fingerprint_recognition_authenticating">指纹识别已经开启，长按指纹解锁键</string>
    <string name="fingerprint_recognition_unlock_screen">测试密码解锁屏幕</string>
    <string name="fingerprint_recognition_not_enrolled">您还没有录制指纹，请录入！</string>
    <string name="fingerprint_not_set_unlock_screen_pws">系统没有设置锁屏密码，请设置！</string>
    <string name="fingerprint_sys_setting_page">进入系统指纹设置页面</string>
    <string name="sys_pwd_recognition_success">系统密码识别成功</string>
    <string name="sys_pwd_recognition_failed">系统密码识别失败</string>

</resources>
