<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.peixing.myapplication.activity.FingerPrintActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            app:layout_scrollFlags="enterAlways|scroll|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:text="指纹识别"
                    android:textColor="@color/black" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fingerprint_guide"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/fingerprint_normal" />

            <TextView
                android:id="@+id/fingerprint_guide_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fingerprint_guide"
                android:layout_centerHorizontal="true"
                android:text="@string/fingerprint_recognition_guide_tip"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/fingerprint_recognition_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fingerprint_guide_tip"
                android:layout_marginTop="10dp"
                android:text="@string/fingerprint_recognition_start" />

            <Button
                android:id="@+id/fingerprint_recognition_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fingerprint_recognition_start"
                android:layout_marginTop="10dp"
                android:text="@string/fingerprint_recognition_cancel" />

            <Button
                android:id="@+id/fingerprint_recognition_sys_unlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fingerprint_recognition_cancel"
                android:layout_marginTop="10dp"
                android:text="@string/fingerprint_recognition_unlock_screen" />

            <Button
                android:id="@+id/fingerprint_recognition_sys_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fingerprint_recognition_sys_unlock"
                android:layout_marginTop="10dp"
                android:text="@string/fingerprint_sys_setting_page" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
